# WorldCup-predict

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PLUGIN_USAGE.md  POST_MATCH_FEEDBACK_LOOP_SPEC.md  POST_MATCH_SYNC.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  release-checklist.md  release-notes-v0.1.0.md  release-notes-v1.0.0.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
app/: __init__.py  config.py  demo.py  world_cup_2026_schedule.py  world_cup_targets.py
app/research_db/: __init__.py  features.py  motivation_context.py  post_match_sync.py  post_match_sync_cli.py  pre_match_research_features.py  pre_match_research_scoring.py  provider_contracts.py  provider_router.py  repository.py  sportradar_soccer.py  world_cup_2026_bootstrap.py  world_cup_2026_odds.py  world_cup_2026_player_form.py  world_cup_2026_recent_results.py  world_cup_context_correction.py  world_cup_prediction_cli.py  world_cup_research_backfill.py
app/storage/: __init__.py  json_store.py  repository.py
configs/: weights_v0_5.yaml
schemas/: analysis_output.schema.json  match_input.schema.json  post_match_review_proposal.schema.json  targeted_backfill_summary.schema.json
scripts/: crawler_context_wrapper.py  run_demo.py  run_post_match_sync.py
tests/: test_bayesian_calibration.py  test_expected_goals.py  test_post_match_feedback_loop.py  test_provider_contracts.py  test_public_repo_smoke.py  test_release_contract.py  test_scoreline_model.py  test_world_cup_prediction_cli.py
(+51 files in other folders)
