[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-agent-open"
version = "1.0.0"
description = "Algorithmic World Cup match prediction plugin for Codex and Claude Code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "requests>=2.31"
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5"
]

[project.scripts]
world-cup-research-backfill = "app.research_db.world_cup_research_backfill:main"
world-cup-predict = "app.research_db.world_cup_prediction_cli:main"
world-cup-post-match-sync = "app.research_db.post_match_sync_cli:main"
world-cup-agent-demo = "app.demo:main"

[tool.setuptools.packages.find]
include = ["app*", "src*"]
